--- a/footer/footer.html
+++ b/footer/footer.html
@@ -5,11 +5,11 @@
     Copyright <span wicket:id="year"></span>
     
     <strong>
-        Donders Institute for Brain, Cognition and Behaviour
+        Behavioural Science Institute
     </strong>
 
     &middot; Version
     <strong><span wicket:id="version"></span></strong>
     
-    &middot; <strong><a href="https://data.donders.ru.nl/privacy-policy">Privacy Policy</a></strong>
+    &middot; <strong><a href="https://www.radboudnet.nl/bsi/procedures/research-data-management/">BSI Research Data Management protocol</a></strong>
 </small>
