--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -1,3 +1,13 @@
 <h1 class="page-header">Welcome to the BSI Repository</h1>
 
-<p>The Behavioural Science Institute (BSI) is a research institute of the Faculty of Social Sciences at the Radboud University. It was re-accredited as a research school by the Royal Netherlands Academy of Arts and Sciences (KNAW) in 2012. The Institute offers a two-year Research Master's (RM) programme in Behavioural Science, taught within the BSI Graduate School. In 2010 BSI received a highly selective official recognition as a graduate school by the Netherlands Organisation for Scientific Research (NWO).</p>
+<p>Welcome to the data repository of the Behavioural Science Institute (BSI) of the Faculty of Social Sciences at the Radboud University. The purpose of this repository is to securely archive your original data and accompanying documentation in collections.</p>
+<p>In a Data Acquisition Collection (DAC), the data are archived in their original form. Here, original means without any manipulations that limit future analyses of these data. A Research Documentation Collection (RDC) documents the process via which data are converted into published results.</p>
+<p>To request a collection for your research project, please contact the BSI data officer (dataofficer@bsi.ru.nl; 024-3612701) with the following information:</p>
+<ul>
+  <li>Your name and U-number</li>
+  <li>The name of your research project within the BSI</li>
+  <li>The names and U-numbers of other RU employees who should have access to the collection</li>
+  <li>The name of an existing RU workgroup folder from which data are archived</li>
+  <li>The type of collection (DAC and/or RDC) you are requesting</li>
+</ul>
+<p>For more information on data use agreements, please see the information available <a href="https://data-acc.bsi.ru.nl/datauseagreement?9">here</a>.</p>
