--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -2,7 +2,7 @@
 
 <p>Welcome to the data repository of the Behavioural Science Institute (BSI) of the Faculty of Social Sciences at the Radboud University.</p>
 <p>The purpose of this repository is to securely archive your original data and accompanying documentation in collections. In a Data Acquisition Collection (DAC), the data are archived in their original form. Here, original means without any manipulations that limit future analyses of these data. A Research Documentation Collection (RDC) documents the process via which data are converted into published results.</p>
-<p>To request a collection for your research project, please contact the BSI data officer (dataofficer@bsi.ru.nl; 024-3612701) with the following information:</p>
+<p>To request a collection for your research project, please contact the BSI data officer (<a href="mailto:dataofficer@bsi.ru.nl">dataofficer@bsi.ru.nl</a>; 024-3612701) with the following information:</p>
 <ul>
   <li>Your name and U-number</li>
   <li>The name of your research project within the BSI</li>
